--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
   <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
   <link rel="stylesheet" href="/styles/header.css" type="text/css" />
   <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
+  <link rel="stylesheet" href="/styles/old-tweet.css" type="text/css" />
   <!-- External JS -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
@@ -57,7 +58,36 @@
         </div>
       </form>
     </section>
+    <section class="container">
+      <article class="old-tweet">
+        <header class="tweet-header">
+          <div class="img-name">
+            <img src="images/icons8-face-id-64.png">
+            <span class="tweeter-name"> hee ha</span>
+          </div>
+          <span class="tweeter-id"> @heeha</span>
+        </header>
+        <div class="border-bottom">
+          <h4>Main Tweet hello World with border bottom</h4>
+        </div>
+        <footer class="tweet-footer">
+          <span> 10 days ago</span>
+          <div>
+            <img src="images/icons8-repeat-20.png" alt="repeat image"/>
+            <img src="images/icons8-heart-health-20.png" alt="heart image"/>
+            <img src="images/icons8-empty-flag-20.png" alt="flag image"/>
+          </div>
+        </footer>
+      </article>
+      
+
+
+    </section>
   </main>
 </body>
 
+<a target="_blank" href="https://icons8.com/icons/set/heart-health">Heart Health icon</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
+<a target="_blank" href="https://icons8.com/icons/set/empty-flag--v1">Empty Flag icon</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
+<a target="_blank" href="https://icons8.com/icons/set/repeat">Repeat icon</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
+<a target="_blank" href="https://icons8.com/icons/set/face-id">Face ID icon</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
 </html>
