--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
   <link rel="stylesheet" href="/styles/header.css" type="text/css" />
   <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
   <link rel="stylesheet" href="/styles/old-tweet.css" type="text/css" />
+
   <!-- External JS -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
@@ -35,6 +36,7 @@
     <span>tweeter</span>
   </nav>
 
+  <!-- Top header -->
   <header>
     <div>
       <img src="/images/profile-hex.png">
@@ -46,6 +48,7 @@
   </header>
 
   <!-- Page-specific (main) content here -->
+  <!-- Main container for new tweet -->
   <main class="container">
     <section class="new-tweet">
       <h2>Compose Tweet</h2>
@@ -58,6 +61,7 @@
         </div>
       </form>
     </section>
+    <!-- other tweets -->
     <section class="container">
       <article class="old-tweet">
         <header class="tweet-header">
@@ -67,27 +71,53 @@
           </div>
           <span class="tweeter-id"> @heeha</span>
         </header>
-        <div class="border-bottom">
+        <div class="tweet-text">
           <h4>Main Tweet hello World with border bottom</h4>
         </div>
         <footer class="tweet-footer">
           <span> 10 days ago</span>
           <div>
-            <img src="images/icons8-repeat-20.png" alt="repeat image"/>
-            <img src="images/icons8-heart-health-20.png" alt="heart image"/>
-            <img src="images/icons8-empty-flag-20.png" alt="flag image"/>
+            <img src="images/icons8-repeat-20.png" alt="repeat image" />
+            <img src="images/icons8-heart-health-20.png" alt="heart image" />
+            <img src="images/icons8-empty-flag-20.png" alt="flag image" />
           </div>
         </footer>
       </article>
-      
-
+      <!-- other tweet 2 -->
+      <article class="old-tweet">
+        <header class="tweet-header">
+          <div class="img-name">
+            <img src="images/icons8-face-id-64-2.png">
+            <span class="tweeter-name"> aloha</span>
+          </div>
+          <span class="tweeter-id"> @aloha</span>
+        </header>
+        <div class="tweet-text">
+          <h4>Aloha Kia Ora Fish and Chips</h4>
+        </div>
+        <footer class="tweet-footer">
+          <span> 2 days ago</span>
+          <div>
+            <img src="images/icons8-repeat-20.png" alt="repeat image" />
+            <img src="images/icons8-heart-health-20.png" alt="heart image" />
+            <img src="images/icons8-empty-flag-20.png" alt="flag image" />
+          </div>
+        </footer>
+      </article>
 
     </section>
   </main>
 </body>
 
-<a target="_blank" href="https://icons8.com/icons/set/heart-health">Heart Health icon</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
-<a target="_blank" href="https://icons8.com/icons/set/empty-flag--v1">Empty Flag icon</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
-<a target="_blank" href="https://icons8.com/icons/set/repeat">Repeat icon</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
-<a target="_blank" href="https://icons8.com/icons/set/face-id">Face ID icon</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
+<footer>
+  <a target="_blank" href="https://icons8.com/icons/set/heart-health">Heart Health icon</a> icon by <a target="_blank"
+    href="https://icons8.com">Icons8</a>
+  <a target="_blank" href="https://icons8.com/icons/set/empty-flag--v1">Empty Flag icon</a> icon by <a target="_blank"
+    href="https://icons8.com">Icons8</a>
+  <a target="_blank" href="https://icons8.com/icons/set/repeat">Repeat icon</a> icon by <a target="_blank"
+    href="https://icons8.com">Icons8</a>
+  <a target="_blank" href="https://icons8.com/icons/set/face-id">Face ID icon</a> icon by <a target="_blank"
+    href="https://icons8.com">Icons8</a>
+</footer>
+
 </html>
