refactored css and updated index.html to adjust for changes

--- a/public/index.html
+++ b/public/index.html
@@ -33,17 +33,17 @@
 <body>
   <!-- Top nav bar (fixed) -->
   <nav class="navbar">
-    <span>tweeter</span>
+    <span id="title">tweeter</span>
   </nav>
 
   <!-- Top header -->
   <header>
+    <br>
     <div>
       <img src="/images/profile-hex.png">
     </div>
-    <br>
     <div>
-      <h2>Your Name</h2>
+      <h2>Panda Mic</h2>
     </div>
   </header>
 
@@ -64,17 +64,17 @@
     <!-- other tweets -->
     <section class="container">
       <article class="old-tweet">
-        <header class="tweet-header">
+        <header>
           <div class="img-name">
             <img src="images/icons8-face-id-64.png">
-            <span class="tweeter-name"> hee ha</span>
+            <span class="tweeter-name">hee ha</span>
           </div>
           <span class="tweeter-id"> @heeha</span>
         </header>
-        <div class="tweet-text">
+        <div class="tweet-text border-bottom">
           <h4>Main Tweet hello World with border bottom</h4>
         </div>
-        <footer class="tweet-footer">
+        <footer>
           <span> 10 days ago</span>
           <div>
             <img src="images/icons8-repeat-20.png" alt="repeat image" />
@@ -85,18 +85,18 @@
       </article>
       <!-- other tweet 2 -->
       <article class="old-tweet">
-        <header class="tweet-header">
+        <header>
           <div class="img-name">
             <img src="images/icons8-face-id-64-2.png">
-            <span class="tweeter-name"> aloha</span>
+            <span class="tweeter-name">Dark House Labs</span>
           </div>
-          <span class="tweeter-id"> @aloha</span>
+          <span class="tweeter-id"> @DHL_FAST</span>
         </header>
-        <div class="tweet-text">
-          <h4>Aloha Kia Ora Fish and Chips</h4>
+        <div class="tweet-text border-bottom">
+          <h4>DHL indeed delivers on time even in this challenging time.</h4>
         </div>
-        <footer class="tweet-footer">
-          <span> 2 days ago</span>
+        <footer>
+          <span> 5 days ago</span>
           <div>
             <img src="images/icons8-repeat-20.png" alt="repeat image" />
             <img src="images/icons8-heart-health-20.png" alt="heart image" />
