updated to more appropriate names for classes and updated css/html for adjustment

--- a/public/index.html
+++ b/public/index.html
@@ -61,50 +61,47 @@
         </div>
       </form>
     </section>
-    <!-- other tweets -->
-    <section class="container">
-      <article class="old-tweet">
-        <header>
-          <div class="img-name">
-            <img src="images/icons8-face-id-64.png">
-            <span class="tweeter-name">hee ha</span>
+    <section class="tweets">
+      <article class="tweet">
+        <header class="tweeter">
+          <div class="left">
+            <img src="images/icons8-face-id-64.png"/>
+            hee ha
           </div>
-          <span class="tweeter-id"> @heeha</span>
+          <div class="right"> @Korea-South</div>
         </header>
         <div class="tweet-text border-bottom">
           <h4>Main Tweet hello World with border bottom</h4>
         </div>
         <footer>
-          <span> 10 days ago</span>
+          <div> 10 days ago</div>
           <div>
             <img src="images/icons8-repeat-20.png" alt="repeat image" />
             <img src="images/icons8-heart-health-20.png" alt="heart image" />
             <img src="images/icons8-empty-flag-20.png" alt="flag image" />
           </div>
-        </footer>
-      </article>
-      <!-- other tweet 2 -->
-      <article class="old-tweet">
-        <header>
-          <div class="img-name">
-            <img src="images/icons8-face-id-64-2.png">
-            <span class="tweeter-name">Dark House Labs</span>
+        </footer>     
+    </section>
+    <section class="tweets">
+      <article class="tweet">
+        <header class="tweeter">
+          <div class="left">
+            <img src="images/icons8-face-id-64-2.png"/>
+            KIM
           </div>
-          <span class="tweeter-id"> @DHL_FAST</span>
+          <div class="right"> @Korea-North</div>
         </header>
         <div class="tweet-text border-bottom">
-          <h4>DHL indeed delivers on time even in this challenging time.</h4>
+          <h4>Kim Lee Park Yang Han Kwak Byun Hwang...</h4>
         </div>
         <footer>
-          <span> 5 days ago</span>
+          <div> 10 days ago</div>
           <div>
             <img src="images/icons8-repeat-20.png" alt="repeat image" />
             <img src="images/icons8-heart-health-20.png" alt="heart image" />
             <img src="images/icons8-empty-flag-20.png" alt="flag image" />
           </div>
-        </footer>
-      </article>
-
+        </footer>     
     </section>
   </main>
 </body>
