assigned temporary id 'tweets' to tweet section for jQuery accessibility

--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,7 @@
         </div>
       </form>
     </section>
-    <section class="tweets">
+    <section class="tweets" id="tweets">
       <article class="tweet">
         <header class="tweeter">
           <div class="left">
