assigned id name for button and removed 'get' and 'action' attributes from <form>

--- a/public/index.html
+++ b/public/index.html
@@ -49,11 +49,11 @@
   <main class="container">
     <section class="new-tweet">
       <h2>Compose Tweet</h2>
-      <form method="POST" action="/tweets/">
+      <form id="tweet-form">
         <label for="tweet-text">What are you humming about?</label>
         <textarea name="text" id="tweet-text" rows="1"></textarea>
         <div id="tweet-button-area">
-          <button type="submit">Tweet</button>
+          <button id="form-button" type="submit">Tweet</button>
           <output name="counter" class="counter" for="tweet-text">140</output>
         </div>
       </form>
