assgined id for tweet counter

--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
         <textarea name="text" id="tweet-text" rows="1"></textarea>
         <div id="tweet-button-area">
           <button id="form-button" type="submit">Tweet</button>
-          <output name="counter" class="counter" for="tweet-text">140</output>
+          <output id="counter" class="counter" for="tweet-text">140</output>
         </div>
       </form>
     </section>
