--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
   <!-- Top nav bar (fixed) -->
   <nav class="navbar">
     <span id="title">tweeter</span>
+    <span id="compose">Tweet a new tweet</span>
   </nav>
 
   <!-- Top header -->
@@ -51,7 +52,7 @@
       <h2>Compose Tweet</h2>
       <form id="tweet-form">
         <label for="tweet-text">What are you humming about?</label>
-        <textarea name="text" id="tweet-text" rows="1"></textarea>
+        <input type="text" name="text" id="tweet-text" rows="1"/>
         <div id="tweet-button-area">
           <div>
             <button id="form-button" type="submit">Tweet</button>
