--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
 <head>
   <!-- Meta Information -->
   <title>Tweeter - Home Page</title>
+  <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
 
   <!-- External CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
@@ -34,7 +35,7 @@
   </nav>
 
   <!-- Top header -->
-  <header>
+  <header class="header">
     <br>
     <div>
       <img src="/images/profile-hex.png">
@@ -50,7 +51,7 @@
     <section class="new-tweet">
       <form id="tweet-form">
         <label for="tweet-text">What are you humming about?</label>
-        <input type="text" name="text" id="tweet-text" rows="1"/>
+        <input type="text" name="text" id="tweet-text" rows="1" />
         <div id="tweet-button-area">
           <div>
             <button id="form-button" type="submit">Tweet</button>
