--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
     <section class="new-tweet">
       <form id="tweet-form">
         <label for="tweet-text">What are you humming about?</label>
-        <input type="text" name="text" id="tweet-text" rows="1" />
+        <textarea name="text" id="tweet-text" rows="1"></textarea>
         <div id="tweet-button-area">
           <div>
             <button id="form-button" type="submit">Tweet</button>
