reaction icons only appear when hovered. linted and updated all related files.

--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
   <!-- Page-specific (main) content here -->
   <!-- Main container for new tweet -->
   <main class="container">
-    <section class="new-tweet">
+    <section class="new-tweet hidden">
       <form id="tweet-form">
         <label for="tweet-text">What are you humming about?</label>
         <textarea name="text" id="tweet-text" rows="1"></textarea>
