trimmed external source copyright

--- a/public/index.html
+++ b/public/index.html
@@ -68,11 +68,9 @@
 </body>
 
 <footer>
-  <a target="_blank" href="https://icons8.com/icons/set/heart-health">Heart Health icon</a> icon by <a target="_blank"
-    href="https://icons8.com">Icons8</a>
-  <a target="_blank" href="https://icons8.com/icons/set/empty-flag--v1">Empty Flag icon</a> icon by <a target="_blank"
-    href="https://icons8.com">Icons8</a>
-  <a target="_blank" href="https://icons8.com/icons/set/repeat">Repeat icon</a> icon by <a target="_blank"
+  <a target="_blank" href="https://icons8.com/icons/set/heart-health">Heart Health</a>,
+  <a target="_blank" href="https://icons8.com/icons/set/empty-flag--v1">Empty Flag</a>,
+  <a target="_blank" href="https://icons8.com/icons/set/repeat">Repeat</a> icons by <a target="_blank"
     href="https://icons8.com">Icons8</a>
 </footer>
 
